--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "covid-tracker",
   "version": "0.1.0",
   "private": true,
+  "homepage": "",
   "dependencies": {
     "@material-ui/core": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.8",
@@ -40,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
